# sauce-engine

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  Camera.cpp  Camera.h  camera.cpp  camera.h  object.cpp  object.h
src/imgui/: CMakeLists.txt  ImVec3.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
src/imgui/misc/freetype/: CMakeLists.txt  imgui_freetype.cpp
src/math/: CMakeLists.txt  ImVec3.cpp  ImVec3.h  matrix.cpp  matrix.h  trigonometry.cpp  trigonometry.h
